Modified circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@
           name: Build 
           command: dotnet build
 
-  deploy:
+  dev-deploy:
     machine:
       image: ubuntu-1604:201903-01 
     steps:
@@ -31,7 +31,7 @@
   build_and_deploy:
     jobs:
       - build
-      - deploy:
+      - dev-deploy:
           requires:
             - build
           filters:
