--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,17 @@
           repo: $ACR_REPO_NAME
           tag: latest
 
+  prod-deploy:
+    machine:
+      image: ubuntu-1604:201903-01 
+    steps:
+      - checkout
+      - azure-acr/build-and-push-image:
+          login-server-name: $ACR_SERVER_NAME
+          registry-name: $ACR_REGISTRY_NAME
+          repo: $ACR_REPO_NAME
+          tag: latest
+
  workflows:
   build_and_deploy:
     jobs:
@@ -34,6 +45,13 @@
       - dev-deploy:
           requires:
             - build
+          filters:
+            branches:
+              only: master
+      - prod-deploy:
+          requires:
+            - dev-deploy
+          type: approval
           filters:
             branches:
               only: master
