--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@
 
  orbs:
   azure-acr: circleci/azure-acr@0.2.0
+  slack: circleci/slack@3.4.2
 
  jobs:
   build:
@@ -16,16 +17,29 @@
           name: Build 
           command: dotnet build
 
-  dev-deploy:
+  stage-deploy:
     machine:
       image: ubuntu-1604:201903-01 
     steps:
+      - slack/notify:
+          title: "Staging Deployment"
+          message: "Staging deployment started!"
+          color: "#42e2f4"
+          webhook: ${SLACK_WEBHOOK}
       - checkout
       - azure-acr/build-and-push-image:
           login-server-name: $ACR_SERVER_NAME
           registry-name: $ACR_REGISTRY_NAME
           repo: $ACR_REPO_NAME
           tag: latest
+      - slack/status:
+          fail_only: true
+          failure_message: "Staging deployment failed!"
+          webhook: ${SLACK_WEBHOOK}
+      - slack/status:
+          fail_only: false
+          success_message: "Staging deployment has been completed!"
+          webhook: ${SLACK_WEBHOOK}
 
   prod-deploy:
     machine:
@@ -42,7 +56,7 @@
   build_and_deploy:
     jobs:
       - build
-      - dev-deploy:
+      - stage-deploy:
           requires:
             - build
           filters:
@@ -50,7 +64,7 @@
               only: master
       - prod-deploy:
           requires:
-            - dev-deploy
+            - stage-deploy
           type: approval
           filters:
             branches:
