--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,8 @@
           registry-name: $ACR_REGISTRY_NAME
           repo: $ACR_REPO_NAME
           tag: latest
-      - slack/status:
-          fail_only: true
-          failure_message: ":wall: Staging $CIRCLE_JOB deployment has failed!"
-          webhook: ${SLACK_WEBHOOK}
-      - slack/status:
-          fail_only: false
-          success_message: ":tada: Staging $CIRCLE_JOB deployment has been succeeded!"
-          webhook: ${SLACK_WEBHOOK}
+      - notify-failure
+      - notify-success
 
   prod-deploy:
     machine:
@@ -46,13 +40,25 @@
           registry-name: $ACR_REGISTRY_NAME
           repo: $ACR_REPO_NAME
           tag: latest
+      - notify-failure
+      - notify-success
+
+  notify-failure:
+    machine:
+      image: ubuntu-1604:201903-01
+    steps:
       - slack/status:
           fail_only: true
-          failure_message: ":wall: Production $CIRCLE_JOB deployment has failed!"
+          failure_message: ":wall: $CIRCLE_JOB has failed!"
           webhook: ${SLACK_WEBHOOK}
+
+  notify-success:
+    machine:
+      image: ubuntu-1604:201903-01
+    steps:
       - slack/status:
           fail_only: false
-          success_message: ":tada: Production $CIRCLE_JOB deployment has been succeeded!"
+          failure_message: ":tada: $CIRCLE_JOB has been succeeded!"
           webhook: ${SLACK_WEBHOOK}
 
   prod-approval:
