--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,10 @@
  workflows:
   build_and_deploy:
     jobs:
-      - dev-deploy
+      - dev-deploy:
+          filters:
+            branches:
+              ignore: master
       - stage-deploy:
           requires:
             - dev-deploy
