--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@
  jobs:
   dev-deploy:
     machine:
+      docker_layer_caching: true
       image: ubuntu-1604:201903-01 
     steps:
       - checkout
