--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
  orbs:
   azure-acr: circleci/azure-acr@0.2.0
   slack: circleci/slack@3.4.2
+  versioning: streamroot/versioning@0.1.1
 
  commands:
   notify-failure:
@@ -33,11 +34,12 @@
       #docker_layer_caching: true #Does not support for free plan
       image: ubuntu-1604:201903-01 
     steps:
+      - versioning/generate
       - azure-acr/build-and-push-image:
           login-server-name: $ACR_SERVER_NAME
           registry-name: $ACR_REGISTRY_NAME
           repo: $ACR_REPO_NAME
-          tag: dev,<< pipeline.number >>
+          tag: dev,<< pipeline.number >>,$VERSION
       - notify-failure
       - notify-success
 
