--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
  orbs:
   azure-acr: circleci/azure-acr@0.2.0
   slack: circleci/slack@3.4.2
+  azure-cli: circleci/azure-cli@1.1.0
 
  commands:
   notify-failure:
