--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@
  orbs:
   azure-acr: circleci/azure-acr@0.2.0
   slack: circleci/slack@3.4.2
-  azure-cli: circleci/azure-cli@1.1.0
+  azure-cli: circleci/azure-cli@1.0.0
 
  commands:
   notify-failure:
@@ -28,7 +28,7 @@
           webhook: "$SLACK_WEBHOOK"
           url: 'https://circleci.com/workflow-run/${CIRCLE_WORKFLOW_ID}'
   
-  azurecli-install:
+  verify-azurecli-install:
     executor: azure-cli/default
     steps:
       - azure-cli/install
@@ -90,7 +90,6 @@
     machine:
       image: ubuntu-1604:201903-01 
     steps:
-      - azurecli-install
       - appservice-deploy:
           app-name: iamsampleapp
           resource-group: IAM-organization-staging-rg
