Modified circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,8 @@
       - run:
           command: fail please
       - notify-failure
+      - notify-success:
+        when: on_success
       - when:
           condition: $SLACK_BUILD_STATUS = "success"
           steps:
