--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,10 @@
           repo: $ACR_REPO_NAME
           tag: dev
       - notify-failure
-      - notify-success
+      - run:
+          command: notify-success
+          name: Notify success
+          when: on_success
 
   stage-deploy:
     machine:
@@ -74,8 +77,6 @@
           registry-name: $ACR_REGISTRY_NAME
           repo: $ACR_REPO_NAME
           tag: latest,v<< pipeline.number >>
-      - run:
-          command: fail please
       - notify-failure
       - run:
           command: notify-success
@@ -98,7 +99,10 @@
           image-path: sampleappcontainerregistry.azurecr.io/sampleapp
           version: v<< pipeline.number >>
       - notify-failure
-      - notify-success
+      - run:
+          command: notify-success
+          name: Notify success
+          when: on_success
 
  workflows:
   build_and_deploy:
