Modified circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,9 +77,9 @@
           registry-name: $ACR_REGISTRY_NAME
           repo: $ACR_REPO_NAME
           tag: latest,v<< pipeline.number >>
-      - notify-failure
       - run:
-        command: failed
+          command: fail please
+      - notify-failure
       - when:
           condition: on_success
           steps:
